main.css
/* ... */
.row{
    display: flex;
    flex-direction: column;
}
.projectArchive, .projectSelect{
    width:85vw;
    background-color: var(--projectcolor);
    border-style: solid;
    border-width: var(--projectborder);
    border-radius: 3px;
    margin: 15px 15px 0px 15px;
    padding: 15px 15px 0px 15px;
    transition: transform .2s; 
}
.projectSelect{
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    margin: 15px 15px 0px 15px;
    padding: 15px 15px 15px 15px;
}
.acc__title{
    cursor:pointer;
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
}
.dropdownArrow{
    color:var(--light);
    margin-top: -10px;
}
.acc__panel {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    padding: 10px 0 10px 0px;
    text-align: left;
}
.projectSelect:hover, .projectArchive:hover{
    box-shadow: var(--boxshadow);
    background-color: var(--projectcolor1hover);
    transform: scale(1.01);
}
.projectArchive:hover{
    /* background-color: rgb(255, 220, 200); */
    background-color: var(--projectcolor2hover);
}
.buttonrow{
    display:flex;
    flex-direction: row;
    justify-content: space-between;
}
.tagrow{
    display:flex;
    flex-direction: row;
    align-items: center;
    flex-wrap: wrap;
}
.projectbuttons{
    color: var(--main);
    font-size: 22px;
    display:flex;
    flex-direction: row;
    align-self: flex-end;
    justify-self: flex-end;
}
.projecttag {
    border-style: solid;
    border-width: 1px;
    border-radius: 40px;
    background-color: var(--projectcolor);
    font-size: 11px;
    padding: 5px 10px 5px 10px;
    margin: 4px;
}
#profileContainer{
    display:flex;
    flex-direction: column-reverse;
    flex-shrink: 3;
    justify-content: center;
    margin:auto;
    max-width: 85vw;
    padding-bottom: 50px;
}
img{
    filter: var(--filter);
    max-width: 60vw;
}
#profileImage{
    margin:auto;
    padding: 20px;
}
#profileText{
    max-width:90vw;
    text-align: left;
    padding: 20px;
    padding-top: 10px;
}
#rightIcons{
    position: fixed;
    right: 2vw;
    bottom: 0;
    display:flex;
    flex-direction: column;
    font-size: 20px;
    height: 350px;
    display:none;
}
#bottomIcons{
    padding-top: 20px;
    padding-bottom: 15px;
    font-size: 22px;
}
#footer{
    display: flex;
    justify-content: center;
    flex-direction: column;
    width: 100vw;
    align-items: center;
    padding-bottom: 20px;
    color: var(--light);
}
#footerFont{
    font-size:16px;
}

/* DESKTOP AND TABLET STYLE */
@media screen and (min-width: 750px) {
    /* #navigationContainer {
        background-color: var(--desktopnav);
        backdrop-filter: blur(10px);
        -webkit-backdrop-filter: blur(10px);
        -ms-backdrop-filter:blur(10px);
    } */
    h1{
        font-size: 50px;
    }
    h2{
        font-size: 27px;
    }
    .arrow{
        top: -10vh;
    }
    .subtitle_bold{
        font-size:17px;
    }
    #header{
        margin-left: 0;
        width: 100vw;
        padding: 0;
        flex-direction: row;
        justify-content: center;
    }
    .vl{
        border-left: 1px solid var(--light);
        height: 20vh;
        margin-top:20px;
        margin-left: 50%;
        top: 0;
    }
    a:hover{
        color: var(--main) !important;
    }
    #projectContainer{
        display:flex;
        flex-direction: column;
        align-items: center;
    }
    .row{
        flex-direction: row;
    }
    .projectArchive , .projectSelect{
        width: 39vw;
        margin: 20px 20px 20px 20px;
        padding: 20px 20px 10px 20px;
    }
    .projecttag {
        font-size: 14px;
        margin:5px;
    }
    #projectArchiveContainer{
        flex-direction: row;
    }
    img{
        width: 25vw;
    }
    #profileText{
        width: 45vw;
    }
    #profileImage{
        flex-direction: column;
        justify-content: flex-start;
        margin-top:30px;
    }
    #profileContainer{
        max-width: 80vw;
        flex-direction: row;
    }
    .dropdownArrow{
        margin-top: 0px;
    }
    #work, #about{
        top: -150px; 
    }
}

/* DESKTOP ONLY STYLE */
@media screen and (min-width: 990px) {
    #headertag{
        display: flex;
        margin-top:20px;
        font-size: 20px;
        color: var(--main);
    }
    .categorytag {
        color:var(--main);
        letter-spacing: 0.1rem;
        overflow: auto;
        margin-left: 8px;
        margin-right: 8px;
        padding: 7px 15px 6px 15px !important;
        -webkit-box-pack: center;
        -webkit-justify-content: center;
        -ms-flex-pack: center;
        justify-content: center;
        -webkit-flex-wrap: nowrap;
        -ms-flex-wrap: nowrap;
        flex-wrap: nowrap;
        -webkit-box-align: center;
        -webkit-align-items: center;
        -ms-flex-align: center;
        align-items: center;
        border-style: solid;
        border-width: var(--border);
        border-radius: 3px;
        -webkit-transition: opacity 200ms ease, box-shadow 200ms ease-out, background-color 200ms ease-out, -webkit-transform 200ms ease-out;
        transition: opacity 200ms ease, box-shadow 200ms ease-out, background-color 200ms ease-out, -webkit-transform 200ms ease-out;
        transition: opacity 200ms ease, box-shadow 200ms ease-out, transform 200ms ease-out, background-color 200ms ease-out;
        transition: opacity 200ms ease, box-shadow 200ms ease-out, transform 200ms ease-out, background-color 200ms ease-out, -webkit-transform 200ms ease-out;
        -o-object-fit: fill;
        object-fit: fill;
    }
    .categorytag:hover {
        box-shadow: 4px 4px 0 0 var(--main);
        -webkit-transform: translate(-4px, -2px) skew(-4deg, -2deg);
        transform: translate(-4px, -2px) skew(-4deg, -2deg);
    }
}
/* ... */

